<resources>
    <string name="app_name">FlashCardApp</string>
    <string name="title">Multiplication Flash Cards</string>
    <string name="welcome">Welcome</string>
    <string name="enter_user_name">Enter User Name to load or register</string>
    <string name="play_button">Play</string>
    <string name="settings_button">Settings</string>
    <string name="icon_description">app icon</string>
    <string name="choose_number_text">Which number and operator would you like to practice with?</string>
    <string name="number_text">Number</string>
    <string name="operator_text">Operator</string>
    <string name="confirm_selection_button">Let\'s Go!</string>
    <string-array name="number_spinner">
        <item>Ones (1)</item>
        <item>Twos (2)</item>
        <item>Threes (3)</item>
        <item>Fours (4)</item>
        <item>Fives (5)</item>
        <item>Sixes (6)</item>
        <item>Sevens (7)</item>
        <item>Eights (8)</item>
        <item>Nines (9)</item>
        <item>Tens (10)</item>
        <item>Elevens (11)</item>
        <item>Twelves (12)</item>
    </string-array>
    <string-array name="operator_spinner">
        <item>Add (+)</item>
        <item>Subtract (-)</item>
        <item>Multiply (×)</item>
        <item>Divide (÷)</item>
    </string-array>
</resources>