<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartNewGame">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="129dp"
        android:text="@string/choose_number_text"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintLeft_toRightOf="@id/ng_centerLeft"
        app:layout_constraintRight_toLeftOf="@id/ng_centerRight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <Spinner
        android:id="@+id/numberSpinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:entries="@array/number_spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/ng_centerRight"
        app:layout_constraintLeft_toRightOf="@id/ng_centerRightDivider"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.109"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/number_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/ng_centerLeftDivider"
        app:layout_constraintLeft_toRightOf="@+id/ng_centerLeft"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.123" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/operator_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/ng_centerLeftDivider"
        app:layout_constraintLeft_toRightOf="@id/ng_centerLeft"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.2" />

    <Spinner
        android:id="@+id/operandSpinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:entries="@array/operator_spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/ng_centerRight"
        app:layout_constraintLeft_toRightOf="@id/ng_centerRightDivider"
        app:layout_constraintTop_toBottomOf="@+id/numberSpinner"
        app:layout_constraintVertical_bias="0.175" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_selection_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/ng_centerRight"
        app:layout_constraintLeft_toRightOf="@id/ng_centerLeft"
        app:layout_constraintTop_toBottomOf="@+id/operandSpinner"
        app:layout_constraintVertical_bias="0.161" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ng_centerLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ng_centerRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ng_centerLeftDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ng_centerRightDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.40" />

</androidx.constraintlayout.widget.ConstraintLayout>